# gossl

./: .bazelrc  .gitignore  .multitool.lock.json  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  go.mod  go.sum  gossl.txt  install.sh
.claude/skills/code-review/: SKILL.md
.github/workflows/: release.yml
cmd/gossl/: BUILD.bazel  main.go
docs/: 001-gossl-cli-design.md  002-database-model-plan.md  003-sqlc-bazel-integration.md  004-key-inspect-design.md
docs/users/: ca-management.md  certificates.md  csr.md  getting-started.md  keys.md  sclient.md  serve.md  troubleshooting.md
internal/cli/: BUILD.bazel  ca.go  ca_test.go  cert.go  cert_sign_test.go  cert_test.go  crypto.go  crypto_test.go  csr.go  csr_test.go  docs.go  graph.go  key.go  key_test.go  root.go  sclient.go  sclient_test.go  serve.go  serve_test.go
internal/cli/docs/: graph.md
internal/store/: BUILD.bazel  certstore_test.go  db.go  db_test.go  keystore_queries.sql  keystore_test.go  queries.sql
internal/store/migrations/: 001_init.sql
internal/version/: BUILD.bazel  version.go
rules/sqlc/: defs.bzl
tests/system/: BUILD.bazel  helpers_test.go  mtls_test.go  sclient_test.go  tls_test.go
tools/: BUILD.bazel  check-version.sh  coverage.sh  gopackagesdriver.sh  stamper.sh  tools.go
tools/coverage/: BUILD.bazel
tools/format/: BUILD.bazel
transcripts/: cbb25214-6ae3-4276-bf73-e26af4d3922f.jsonl  e9f74163-02b4-4010-abdf-61c9077cd34f.jsonl
transcripts/agent1/: index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  page-007.html  page-008.html  page-009.html  page-010.html  page-011.html  page-012.html  page-013.html  page-014.html  page-015.html  page-016.html  page-017.html  page-018.html  page-019.html  page-020.html  page-021.html  page-022.html  page-023.html  page-024.html  page-025.html  page-026.html  page-027.html  page-028.html
transcripts/agent2/: index.html  page-001.html  page-002.html  page-003.html  page-004.html
transcripts/agent3/: index.html  page-001.html
transcripts/agent4/: index.html  page-001.html  page-002.html  page-003.html  page-004.html
