module(
    name = "gossl",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")
bazel_dep(name = "rules_buf", version = "0.5.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_prometheus_client_golang",
    "com_github_spf13_cobra",
    "com_github_testcontainers_testcontainers_go",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "org_golang_x_vuln",
    "org_modernc_sqlite",
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:.multitool.lock.json")
use_repo(multitool, "multitool")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
use_repo(buf, "rules_buf_toolchains")
